--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.11.3",
+    "omise": "^0.12.1",
     "sequelize": "^6.37.3",
+    "twilio": "^5.3.0",
     "validator": "^13.12.0"
   }
 }
